<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background_image"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager_dashboard"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/buttonManageProducts"
        android:layout_width="269dp"
        android:layout_height="44dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/rounded_button"
        android:text="@string/manage_product"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonManageRevenue"
        android:layout_width="266dp"
        android:layout_height="47dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/rounded1_button"
        android:text="@string/manage_revenue"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonManageEmployees"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/rounded2_button"
        android:text="@string/manage_employees"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonManageCustomers"
        android:layout_width="268dp"
        android:layout_height="52dp"
        android:src="@drawable/rounded3_button"
        android:text="@string/manage_customer"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="261dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/logout"
        android:textSize="20sp" />

</LinearLayout>
